Theme updates, alignment and fixes

--- a/public/sass/_variables.dark.generated.scss
+++ b/public/sass/_variables.dark.generated.scss
@@ -30,7 +30,7 @@ $gray85: #c7d0d9;
 $gray70: #9fa7b3;
 $gray60: #7b8087;
 $gray33: #464c54;
-$gray25: #343b40;
+$gray25: #2c3235;
 $gray15: #202226;
 $gray10: #141619;
 $gray05: #0b0c0e;
@@ -204,7 +204,7 @@ $input-bg: $input-black;
 $input-bg-disabled: $dark-6;
 
 $input-color: #c7d0d9;
-$input-border-color: #343b40;
+$input-border-color: #2c3235;
 $input-box-shadow: none;
 $input-border-focus: #5794f2;
 $input-box-shadow-focus: $blue-light !default;
@@ -225,7 +225,7 @@ $typeahead-selected-color: $yellow;
 $dropdownBackground: $panel-bg;
 $dropdownBorder: #202226;
 $dropdownDividerTop: transparent;
-$dropdownDividerBottom: #343b40;
+$dropdownDividerBottom: #2c3235;
 
 $dropdownLinkColor: $link-color;
 $dropdownLinkColorHover: $white;
