--- a/public/sass/_variables.light.generated.scss
+++ b/public/sass/_variables.light.generated.scss
@@ -30,7 +30,7 @@ $gray85: #c7d0d9;
 $gray70: #9fa7b3;
 $gray60: #7b8087;
 $gray33: #464c54;
-$gray25: #343b40;
+$gray25: #2c3235;
 $gray15: #202226;
 $gray10: #141619;
 $gray05: #0b0c0e;
@@ -106,7 +106,7 @@ $external-link-color: #33a2e5;
 
 // Typography
 // -------------------------
-$headings-color: #343b40;
+$headings-color: #2c3235;
 $abbr-border-color: $gray-2 !default;
 $text-muted: $text-color-weak;
 
@@ -241,9 +241,9 @@ $navbar-button-border: $gray-4;
 // Sidemenu
 // -------------------------
 $side-menu-bg: #202226;
-$side-menu-border: 1px solid #343b40;
+$side-menu-border: 1px solid #2c3235;
 $side-menu-bg-mobile: rgba(0, 0, 0, 0); //$gray-6;
-$side-menu-item-hover-bg: #343b40;
+$side-menu-item-hover-bg: #2c3235;
 $side-menu-shadow: 5px 0px 10px -5px $gray-1;
 $side-menu-link-color: $gray-4;
 $side-menu-icon-color: #9fa7b3;
